--- a/package.json
+++ b/package.json
@@ -6,31 +6,48 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate",
+    "push": "drizzle-kit push",
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.4",
+    "@as-integrations/next": "^3.0.0",
     "@clerk/nextjs": "^5.1.6",
     "@google/generative-ai": "^0.13.0",
+    "@prisma/client": "^5.15.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.31.2",
+    "graphql": "^16.9.0",
+    "graphql-tag": "^2.12.6",
     "lucide-react": "^0.396.0",
+    "moment": "^2.30.1",
     "next": "14.2.4",
+    "pg": "^8.12.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
-    },
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
+  },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.14.8",
+    "@types/pg": "^8.11.6",
     "@types/react": "18.2.0.",
     "@types/react-dom": "18.2.0.",
+    "drizzle-kit": "^0.22.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "prisma": "^5.15.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2"
   }
 }
