--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.6",
     "@apollo/server": "^4.10.4",
     "@as-integrations/next": "^3.0.0",
     "@clerk/nextjs": "^5.1.6",
@@ -19,6 +20,7 @@
     "@prisma/client": "^5.15.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
