--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/nextjs": "^5.1.6",
     "@google/generative-ai": "^0.13.0",
     "@prisma/client": "^5.15.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
